normally work, but need some fix

--- a/src/main/resources/templates/ADMIN/edit.html
+++ b/src/main/resources/templates/ADMIN/edit.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Update user</title>
+    <title>Edit user</title>
 </head>
 <body>
 
 <form th:method="PATCH" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{username}" id="name"/>
-    <div style="color:darkred" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name error</div>
+    <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name error</div>
     <br>
     <label for="surname">Enter surname: </label>
     <input type="text" th:field="*{surname}" id="surname"/>
@@ -18,11 +18,11 @@
     <br>
     <label for="age">Enter age: </label>
     <input type="number" th:field="*{age}" id="age"/>
-    <div style="color:darkred" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age error</div>
+    <div style="color:red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age error</div>
     <br>
-    <label for="job">Enter job: </label>
-    <input type="text" th:field="*{job}" id="job"/>
-    <div style="color:darkred" th:if="${#fields.hasErrors('job')}" th:errors="*{job}">Job error</div>
+    <label for="email">Enter email: </label>
+    <input type="text" th:field="*{email}" id="email"/>
+    <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
     <br>
     <label for="password">Enter password: </label>
     <input type="text" th:field="*{password}" id="password"/>
