--- a/src/main/resources/templates/USER/show.html
+++ b/src/main/resources/templates/USER/show.html
@@ -13,7 +13,7 @@
         <th>Value</th>
     </tr>
     <tr>
-        <td>ID:</td>
+        <td>Номер ID:</td>
         <td><p th:text="${user.getId()}">VALUE</p></td>
     </tr>
     <tr>
@@ -29,8 +29,8 @@
         <td><p th:text="${user.getAge()}">VALUE</p></td>
     </tr>
     <tr>
-        <td>Job:</td>
-        <td><p th:text="${user.getJob()}">VALUE</p></td>
+        <td>Email:</td>
+        <td><p th:text="${user.getEmail()}">VALUE</p></td>
     </tr>
 </table>
 
