--- a/src/main/resources/templates/ADMIN/show.html
+++ b/src/main/resources/templates/ADMIN/show.html
@@ -27,8 +27,8 @@
         <td><p th:text="${user.getAge()}">VALUE</p></td>
     </tr>
     <tr>
-        <td>Job:</td>
-        <td><p th:text="${user.getJob()}">VALUE</p></td>
+        <td>Email:</td>
+        <td><p th:text="${user.getEmail()}">VALUE</p></td>
     </tr>
 </table>
 
