--- a/src/main/resources/templates/ADMIN/users_table.html
+++ b/src/main/resources/templates/ADMIN/users_table.html
@@ -13,10 +13,10 @@
         </caption>
         <tr>
             <colgroup>
-                <col span="8" style="background-color: #8fce00">
+                <col span="8" style="background-color: #999009">
             </colgroup>
             <th >Id</th>
-            <th>Name+Lastname</th>
+            <th>Full name</th>
         </tr>
 
         <tr th:each="user : ${users}">
