--- a/src/main/resources/templates/ADMIN/edit.html
+++ b/src/main/resources/templates/ADMIN/edit.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form th:method="PATCH" th:action="@{/admin/{id}(id=${user.getId()})}" th:object="${user}">
+<form th:method="POST" th:action="@{/admin/update?id={id}(id=${user.getId()})}" th:object="${user}">
     <label for="name">Enter name: </label>
     <input type="text" th:field="*{username}" id="name"/>
     <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Name error</div>
