--- a/src/main/resources/templates/ADMIN/show.html
+++ b/src/main/resources/templates/ADMIN/show.html
@@ -44,7 +44,7 @@
 
 <a th:href="@{/admin/{id}/edit(id=${user.getId()})}">Edit</a><br>
 
-<form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}"><br>
+<form th:method="POST" th:action="@{/admin/delete?id={id}(id=${user.getId()})}"><br>
     <input type="submit" value="Delete">
 </form>
 
