--- a/src/main/resources/templates/USER/show.html
+++ b/src/main/resources/templates/USER/show.html
@@ -1,50 +1,81 @@
 <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="https://images.pngnice.com/download/2114/Spring-Transparent-PNG.png"
+          type="image/png"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>User page</title>
 </head>
 <body>
+<div class="d-flex bd-highlight p-3 mb-2 bg-dark">
+    <div class="p-2 flex-grow-1 bd-highlight">
+                <span class="text-white fs-5" th:object="${user}">
+                    <span class="fw-bold" th:text="*{username}"></span>
+                        with roles: <span th:each="role : ${userRoles}"
+                                          th:switch="${role.getRole()}">
+                                            <span th:case="'ROLE_ADMIN'">ADMIN</span>
+                                            <span th:case="'ROLE_USER'">USER</span>
+                                    </span>
+                </span>
+    </div>
+    <div class="btn btn-link">
+        <form th:method="POST" th:action="@{/logout}">
+            <input type="submit" class="btn btn-link link-secondary" value="Logout"/>
+        </form>
+    </div>
+</div>
 
-<h3>My information</h3>
-<table>
-    <tr>
-        <th>Code</th>
-        <th>Value</th>
-    </tr>
-    <tr>
-        <td>Номер ID:</td>
-        <td><p th:text="${user.getId()}">VALUE</p></td>
-    </tr>
-    <tr>
-        <td>Username:</td>
-        <td><p th:text="${user.getUsername()}">VALUE</p></td>
-    </tr>
-    <tr>
-        <td>Surname:</td>
-        <td><p th:text="${user.getSurname()}">VALUE</p></td>
-    </tr>
-    <tr>
-        <td>Age:</td>
-        <td><p th:text="${user.getAge()}">VALUE</p></td>
-    </tr>
-    <tr>
-        <td>Email:</td>
-        <td><p th:text="${user.getEmail()}">VALUE</p></td>
-    </tr>
-</table>
+<div class="d-flex align-items-start">
+    <div class="col-2">
+        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <button class="nav-link active" id="v-pills-user-tab" data-bs-toggle="pill" data-bs-target="#v-pills-user"
+                    type="button" role="tab" aria-controls="v-pills-user" aria-selected="true">User
+            </button>
+        </div>
+    </div>
+    <div class="col-10">
+        <div class="tab-content" id="v-pills-tabContent">
+            <div class="tab-pane fade show active" id="v-pills-user" role="tabpanel" aria-labelledby="v-pills-user-tab">
+                <p class="fw-bold fs-3">User information-page</p>
 
-<hr/>
-<h3>Roles:</h3>
-<p th:each="role : ${userRoles}"
-   th:text="${role.getRole()}"
-   th:value="${role.getId()}"
-   th:field="*{user.getRoles()}">VALUE</p>
+                <p class="fw-bold fs-5">About user</p>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Username</th>
+                        <th>Surname</th>
+                        <th>Age</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td th:text="${user.getId()}"/>
+                        <td th:text="${user.getUsername()}"/>
+                        <td th:text="${user.getSurname()}"/>
+                        <td th:text="${user.getAge()}"/>
+                        <td th:text="${user.getEmail()}"/>
+                        <td>
+                                        <span th:each="role : ${user.getRoles()}" th:switch="${role.getRole()}">
+                                                <span th:case="'ROLE_ADMIN'">ADMIN</span>
+                                                <span th:case="'ROLE_USER'">USER</span>
+                                        </span>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
-
-<form th:method="POST" th:action="@{/logout}">
-    <input type="submit" value="Logout!"/>
-</form>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
