--- a/src/main/resources/templates/ADMIN/users_table.html
+++ b/src/main/resources/templates/ADMIN/users_table.html
@@ -23,7 +23,7 @@
     </div>
     <div class="btn btn-link">
         <form th:method="POST" th:action="@{/logout}" >
-            <input type="submit" class="btn btn-link link-secondary" value="Logout" style="color: gray"/>
+            <input type="submit" class="btn btn-link link-secondary" value="Logout" style="color: gray; text-decoration: none"/>
         </form>
     </div>
 </div>
