--- a/src/main/resources/templates/USER/show.html
+++ b/src/main/resources/templates/USER/show.html
@@ -23,7 +23,7 @@
     </div>
     <div class="btn btn-link">
         <form th:method="POST" th:action="@{/logout}">
-            <input type="submit" class="btn btn-link link-secondary" value="Logout"/>
+            <input type="submit" class="btn btn-link link-secondary" value="Logout" style="text-decoration: none; color: gray"/>
         </form>
     </div>
 </div>
