--- a/src/main/resources/templates/ADMIN/users_table.html
+++ b/src/main/resources/templates/ADMIN/users_table.html
@@ -160,7 +160,7 @@
                                                                            class="form-label fw-bold">Password</label>
                                                                     <input type="password" class="form-control"
                                                                            id="edit_password"
-                                                                           th:value="*{password}"
+                                                                           value=""
                                                                            name="Password">
                                                                 </div>
 
